--- a/main.scss
+++ b/main.scss
@@ -3,8 +3,21 @@ $bordercolor: #e2915b;
 
 @keyframes square1
 {
-	50% { transform: rotate(90deg); }
-	100% { transform: rotate(180deg); }
+	0% { transform: rotate(0deg); }
+	13% { transform: rotate(45deg); }
+	25% { transform: rotate(90deg); }
+	38% { transform: rotate(135deg); }
+	50% { transform: rotate(180deg); }
+	63% { transform: rotate(225deg); }
+	75% { transform: rotate(270deg); }
+	88% { transform: rotate(315deg); }
+	100% { transform: rotate(360deg); }
+}
+
+@keyframes square2
+{
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
 
 *
@@ -24,6 +37,11 @@ body
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.square
+{
+	margin: 1rem;
 }
 
 #square1
@@ -53,7 +71,51 @@ body
 				width: 7%;
 				height: 100%;
 				border-radius: 50px;
-				animation: square1 2s ease-in-out infinite;
+				animation: square1 3s ease-in-out infinite;
+			}
+		}
+	}
+
+	.col-even
+	{
+		.spinny-container
+		{
+			.spinny
+			{
+				width: 100%;
+				height: 7%;
+			}
+		}
+	}
+}
+
+#square2
+{
+	border: 3px solid $bordercolor;
+	$width: 250px;
+	width: $width;
+	height: $width;
+	display: flex;
+	overflow: hidden;
+	padding: 2rem;
+
+	.col
+	{
+		display: flex;
+		flex-direction: column;
+
+		.spinny-container
+		{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			.spinny
+			{
+				background-color: white;
+				width: 7%;
+				height: 100%;
+				border-radius: 50px;
 				animation-direction: alternate;
 			}
 		}
