--- a/main.scss
+++ b/main.scss
@@ -2,11 +2,6 @@ $backgroundcolor: #2b2a2d;
 $bordercolor: #ffc39c;
 $elementcolor: $bordercolor;
 
-:root
-{
-	--elementColor: $elementcolor;
-}
-
 @keyframes square1
 {
 	0% { transform: rotate(0deg); }
@@ -32,13 +27,13 @@ $elementcolor: $bordercolor;
 
 @keyframes square4
 {
-	50% { transform: scale(1.5); }
-	100% { transform: scale(.5); }
+	100% { transform: scale(1.9); }
 }
 
 @keyframes square5
 {
-
+	50% { transform: translateY(.2rem); }
+	100% { transform: translateY(-.2rem); }
 }
 
 *
@@ -56,19 +51,26 @@ body
 {
 	background-color: $backgroundcolor;
 	display: flex;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.body-row
+{
+	display: flex;
+	justify-content: space-around;
 	align-items: center;
-	overflow: hidden;
+	flex: 1;
 }
 
 .square
 {
-	background-color: $elementcolor;
-	$width: 250px;
+	$width: 100px;
 	width: $width;
 	height: $width;
 	display: flex;
 	flex-direction: column;
-	margin-right: 1rem;
+	position: relative;
 	overflow: hidden;
 	border: 1px solid $bordercolor;
 
@@ -102,35 +104,6 @@ body
 			}
 		}
 	}
-}
-
-.arrow
-{
-	color: $backgroundcolor;
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 2rem;
-	z-index: 1;
-	text-shadow: 0px 0px 5px $elementcolor;
-}
-
-#leftarrow
-{
-	left: 0;
-}
-
-#rightarrow
-{
-	right: 0;
-}
-
-#container
-{
-	display: flex;
-	position: absolute;
-	overflow: hidden;
 }
 
 #square1
@@ -174,41 +147,11 @@ body
 	}
 }
 
-@media (min-width: 600px)
-{
-	.square
-	{
-		$width: 150px;
-		width: $width;
-		height: $width;
-	}
-}
-
-@media (min-width: 768px)
+@media (min-width: 700px)
 {
 	.square
 	{
 		$width: 200px;
-		width: $width;
-		height: $width;
-	}
-}
-
-@media (min-width: 1200px)
-{
-	.square
-	{
-		$width: 220px;
-		width: $width;
-		height: $width;
-	}
-}
-
-@media (min-width: 1800px)
-{
-	.square
-	{
-		$width: 290px;
 		width: $width;
 		height: $width;
 	}
