--- a/main.scss
+++ b/main.scss
@@ -4,6 +4,11 @@ $elementcolor: $bordercolor;
 
 @keyframes square1
 {
+	100% { transform: rotate(360deg); }
+}
+
+@keyframes square2
+{
 	0% { transform: rotate(0deg); }
 	13% { transform: rotate(45deg); }
 	25% { transform: rotate(90deg); }
@@ -12,11 +17,6 @@ $elementcolor: $bordercolor;
 	63% { transform: rotate(225deg); }
 	75% { transform: rotate(270deg); }
 	88% { transform: rotate(315deg); }
-	100% { transform: rotate(360deg); }
-}
-
-@keyframes square2
-{
 	100% { transform: rotate(360deg); }
 }
 
@@ -32,14 +32,12 @@ $elementcolor: $bordercolor;
 
 @keyframes square5
 {
-	50% { transform: translateY(.17rem); }
-	100% { transform: translateY(-.17rem); }
+	100% { transform: scale(1.9); }
 }
 
 @keyframes square6
 {
-	50% { transform: translateY(.2rem); }
-	100% { transform: translateY(-.2rem); }
+
 }
 
 *
@@ -113,11 +111,11 @@ body
 	}
 }
 
-#square1
+#square2
 {
 	.spinny
 	{
-		animation: square1 3s ease-in-out infinite;
+		animation: square2 3s ease-in-out infinite;
 	}
 
 	.col-even
