--- a/main.scss
+++ b/main.scss
@@ -55,7 +55,9 @@ $elementcolor: $bordercolor;
 
 @keyframes square8
 {
+	25% { transform: rotate(90deg); }
 	50% { transform: rotate(180deg); }
+	75% { transform: rotate(270deg); }
 	100% { transform: rotate(360deg); }
 }
 
