--- a/main.scss
+++ b/main.scss
@@ -64,15 +64,11 @@ $elementcolor: $bordercolor;
 	100% { transform: rotate(360deg); }
 }
 
-*
-{
-	margin: 0;
-	padding: 0;
-}
-
 html, body
 {
-	height: 100%;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
 }
 
 body
