--- a/main.scss
+++ b/main.scss
@@ -42,14 +42,7 @@ $elementcolor: $bordercolor;
 
 @keyframes square7
 {
-	0% { transform: rotate(0deg); }
-	13% { transform: rotate(45deg); }
-	25% { transform: rotate(90deg); }
-	38% { transform: rotate(135deg); }
 	50% { transform: rotate(180deg); }
-	63% { transform: rotate(225deg); }
-	75% { transform: rotate(270deg); }
-	88% { transform: rotate(315deg); }
 	100% { transform: rotate(360deg); }
 }
 
@@ -177,6 +170,11 @@ body
 	}
 }
 
+.square-blocked
+{
+	background-color: $elementcolor;
+}
+
 #square1
 {
 	.spinny
@@ -238,7 +236,7 @@ body
 {
 	.triangle
 	{
-		animation: square7 3s ease-in-out infinite alternate;
+		animation: square7 4s ease-in-out infinite;
 	}
 }
 
@@ -248,7 +246,7 @@ body
 	{
 		.triangle
 		{
-			animation: square8 3s ease infinite alternate;
+			animation: square8 3s ease-in-out infinite alternate;
 		}
 	}
 
@@ -256,7 +254,7 @@ body
 	{
 		.triangle
 		{
-			animation: square8 3s ease infinite alternate-reverse;
+			animation: square8 3s ease-in-out infinite alternate-reverse;
 		}
 	}
 }
