--- a/main.scss
+++ b/main.scss
@@ -62,6 +62,7 @@ html, body
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 body
@@ -69,110 +70,144 @@ body
 	background-color: $backgroundcolor;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	font-family: 'Montserrat', sans-serif;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 
-.body-row
+#viewbox
 {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	flex: 1;
-}
-
-.square
-{
-	$width: 85px;
-	width: $width;
-	height: $width;
-	display: flex;
-	flex-direction: column;
-	position: relative;
+	height: 60%;
 	overflow: hidden;
-	padding: .5rem;
-	border: 1px solid $bordercolor;
+	display: flex;
+	align-items: center;
 
-	.row-even
-	{
-		.col-even
-		{
-			.triangle
-			{
-				clip-path: polygon(50% 100%, 0% 0%, 100% 0%) !important;
-			}
-		}
-
-		.col:not(.col-even)
-		{
-			.triangle
-			{
-				clip-path: polygon(50% 0%, 0% 100%, 100% 100%) !important;
-			}
-		}
-	}
-
-	.row:not(.row-even)
-	{
-		.col-even
-		{
-			.triangle
-			{
-				clip-path: polygon(50% 0%, 0% 100%, 100% 100%) !important;
-			}
-		}
-
-		.col:not(.col-even)
-		{
-			.triangle
-			{
-				clip-path: polygon(50% 100%, 0% 0%, 100% 0%) !important;
-			}
-		}
-	}
-
-	.row
+	#slider
 	{
 		display: flex;
-		justify-content: center;
 
-		.col
+		.square
 		{
+			$width: 80vmin;
+			min-width: $width;
+			height: $width;
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
-			align-items: center;
+			position: relative;
+			overflow: hidden;
+			margin-left: (100 - $width) / 2;
+			padding: (100 - $width) / 2;
+			border: 1px solid $bordercolor;
+			box-sizing: border-box;
 
-			.circle
+			.row-even
 			{
-				background-color: $elementcolor;
-				height: 20%;
-				width: 20%;
-				border-radius: 50%;
-				animation-direction: alternate;
+				.col-even
+				{
+					.triangle
+					{
+						clip-path: polygon(50% 100%, 0% 0%, 100% 0%) !important;
+					}
+				}
+
+				.col:not(.col-even)
+				{
+					.triangle
+					{
+						clip-path: polygon(50% 0%, 0% 100%, 100% 100%) !important;
+					}
+				}
 			}
 
-			.triangle
+			.row:not(.row-even)
 			{
-				background-color: $elementcolor;
-				height: 70%;
-				width: 70%;
-				clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+				.col-even
+				{
+					.triangle
+					{
+						clip-path: polygon(50% 0%, 0% 100%, 100% 100%) !important;
+					}
+				}
+
+				.col:not(.col-even)
+				{
+					.triangle
+					{
+						clip-path: polygon(50% 100%, 0% 0%, 100% 0%) !important;
+					}
+				}
 			}
 
-			.spinny
+			.row
 			{
-				background-color: $elementcolor;
-				width: 7%;
-				height: 100%;
-				border-radius: 50px;
+				display: flex;
+				justify-content: center;
+
+				.col
+				{
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+
+					.circle
+					{
+						background-color: $elementcolor;
+						height: 20%;
+						width: 20%;
+						border-radius: 50%;
+						animation-direction: alternate;
+					}
+
+					.triangle
+					{
+						background-color: $elementcolor;
+						height: 70%;
+						width: 70%;
+						clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+					}
+
+					.spinny
+					{
+						background-color: $elementcolor;
+						width: 7%;
+						height: 100%;
+						border-radius: 50px;
+					}
+				}
 			}
 		}
 	}
 }
 
-.square-blocked
+#controls
 {
-	background-color: $elementcolor;
+	height: 30%;
+	display: flex;
+	flex-direction: grow;
+	justify-content: space-between;
+	align-items: center;
+
+	div
+	{
+		$width: 60px;
+		width: $width;
+		height: $width;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: 1px solid $elementcolor;
+		margin: 2rem;
+		border-radius: 50%;
+
+		p
+		{
+			color: $elementcolor;
+			font-size: 2rem;
+			margin: 0rem;
+		}
+	}
 }
 
 #square1
@@ -264,16 +299,5 @@ body
 	.triangle
 	{
 		animation: square9 3s ease infinite alternate;
-	}
-}
-
-@media (min-width: 700px)
-{
-	.square
-	{
-		$width: 190px;
-		width: $width;
-		height: $width;
-		padding: 1rem;
 	}
 }
