--- a/main.scss
+++ b/main.scss
@@ -86,6 +86,7 @@ body
 	#slider
 	{
 		display: flex;
+		transition: margin-left .3s ease-in-out;
 
 		.square
 		{
@@ -229,8 +230,8 @@ body
 	{
 		.spinny
 		{
-			width: 100%;
-			height: 7%;
+			width: 100% !important;
+			height: 7% !important;
 		}
 	}
 }
